# chia-blockchain

./: .coveragerc  .diffcover.toml  .editorconfig  .env  .env.example  .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .jshintrc  .linguirc  .markdown-lint.yml  .pre-commit-config.yaml  .prettierrc.yaml  .prettierrc.yml  .pylintrc  .python-black  .repo-content-updater.yml  .shellcheckrc  1  AGENTS.md  BUILD_TIMELORD.md  Benches  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSR_API.md  DAO.diff  Dowmload  EDC_AGENTS.md  FIX_REVIEW_REPORT.md  INSTALL.md  Install scripts  Install-gui.ps1  Install-plotter.ps1  Install.ps1  LEGACY-SUPPORT-POLICY.md  (+106 more)
.cursor/: BUGBOT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  dependabot.yml.disable  release.yml
CHIPs/: chip-remote-compact-vdf-proofs.md
benchmarks/: address_manager_store.py  block_ref.py  block_store.py  blockchains.py  coin_state_streaming.py  coin_store.py  dict_fromkeys_dedup_benchmark.py  jsonify.py  mempool-long-lived.py  mempool.py  streamable.py  subscriptions.py  transaction_height_delta  utils.py
blspy-stubs/: setup.py
build_scripts/: build_dmg.js  build_license_directory.ps1  build_license_directory.sh  build_linux.sh  build_linux_deb-1-gui.sh  build_linux_deb-2-installer.sh  build_linux_deb.sh  build_linux_deb_arm64-2-installer.sh  build_linux_deb_experimental.sh  build_linux_rpm-1-gui.sh  build_linux_rpm-2-installer.sh  build_linux_rpm.sh  build_linux_rpm_experimental.sh  build_mac.sh  build_macos-1-gui.sh  build_macos-2-installer.sh  build_macos.sh  build_macos_experimental.sh  build_macos_m1-1-gui.sh  build_macos_m1-2-installer.sh  build_macos_m1.sh  build_macos_m1_experimental.sh  build_win_license_dir.sh  build_windows-1-gui.ps1  build_windows-2-installer-a.ps1  build_windows-2-installer-b.ps1  build_windows-2-installer-c.ps1  build_windows-2-installer.ps1  build_windows.ps1  build_windows1.ps1  build_windows2.ps1  check_dependency_artifacts.py  clean-runner.sh  daemon.spec  daemon_windows.spec  deb-options.json  electron-builder.json  install_win.py  installer-version.py  macos_notarize_build.txt  (+17 more)
changes/: another.deprecated  code_block.deprecated  links_with_custom_text.deprecated  more.added  multiple_lines.fixed  template.md  x.added
chia/: __init__.py  __main__.py  _pytest_plugin.py  apis.py  pyinstaller.spec
chinilla/: __init__.py  pyinstaller.spec
chives/: __init__.py  pyinstaller.spec
clvm/: singleton.py  spend_sim.py
cmds/: keys_funcs.py  netspace_funcs.py  plots.py  show.py  stop.py
config/: config.yaml  keys.yaml  plots.yaml  ssh_host_key
consensus/: block_body_validation.py  blockchain.py  coinbase.py  constants.py  difficulty_adjustment.py  make_sub_epoch_summary.py  multiprocess_validation.py  vdf_info_computation.py
lib/bip158/: CMakeLists.txt  Makefile  PyBIP158.cpp  README.md  main.cpp  pythonbindings.cpp  setup.py
lib/bip158/python-bindings/: PyBIP158.cpp  PyBIP158.h  chiabip158.cpp  test.py
lib/bip158/src/: PyBIP158.cpp  PyBIP158.h
lib/chiapos/: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare.sh  setup.py
lib/chiapos/documents/: proof_of_space.html  proof_of_space.md
lib/chiapos/hellman_example/: bits.hpp  calculate_bucket.hpp  cli.cpp  encoding.hpp  hellman.hpp  picosha2.hpp  plotter_disk.hpp  pos_constants.hpp  prover_disk.hpp  readme.md  util.hpp  verifier.hpp
lib/chiapos/lib/FiniteStateEntropy/: LICENSE  README.md
lib/chiapos/lib/FiniteStateEntropy/Visual/VC2012/: FSE.sln
lib/chiapos/lib/FiniteStateEntropy/Visual/VC2012/FSE/: FSE.vcxproj
lib/chiapos/lib/FiniteStateEntropy/Visual/VC2012/fuzzer/: fuzzer.vcxproj
lib/chiapos/lib/FiniteStateEntropy/Visual/VC2012/libfse/: libfse.rc  libfse.vcxproj
lib/chiapos/lib/FiniteStateEntropy/lib/: entropy_common.c  error_private.h  error_public.h  fse.h  fseU16.c  fseU16.h
lib/chiapos/lib/FiniteStateEntropy/lib/Archives/: hufx6.h  hufx6_decompress.c
lib/chiapos/lib/FiniteStateEntropy/programs/: README.md  bench.c  bench.h  commandline.c  fileio.c  fileio.h  fseDist.c  fseDist.h  fullbench.c  fuzzer.c  fuzzerHuff0.c  fuzzerU16.c  probaGenerator.c  xxhash.c  xxhash.h  zlibh.c  zlibh.h
lib/chiapos/lib/include/: catch.hpp  cxxopts.hpp
lib/chiapos/python-bindings/: chiapos.cpp  test.py
lib/chiapos/src/: aes.hpp  aesni.hpp  bits.hpp  calculate_bucket.hpp  cli.cpp  cmake_aesni_test.c  cmake_aesni_test.cpp  encoding.hpp  plotter_disk.hpp  pos_constants.hpp  prover_disk.hpp  soft_aes.hpp  sort_on_disk.hpp  stack_allocator.h  streams.hpp  util.hpp  verifier.hpp
lib/chiapos/tests/: test-main.cpp  test.cpp  test_python_bindings.py
lib/chiavdf/fast_vdf/: .gitignore  CMakeLists.txt  ClassGroup.h  Makefile  README.md  Reducer.h  asm_base.h  asm_compiled.s  asm_gcd_128.h  asm_gcd_base_continued_fractions.h  asm_gcd_base_divide_table.h  asm_gcd_unsigned.h  asm_main.h  asm_types.h  asm_vm.h  bit_manipulation.h  classgroup.py  compile.sh  compile_asm  compile_asm.cpp  copy_to_repo.sh  create_discriminant.h  double_utility.h  gcd_128.h  gcd_base_continued_fractions.h  gcd_base_divide_table.h  gcd_unsigned.h  generic.h  generic_macros.h  gpu_integer.h  gpu_integer_divide.h  gpu_integer_gcd.h  include.h  install.sh  install_child.sh  integer.h  integer_common.h  nucomp.h  parameters.h  proof_common.h  (+24 more)
lib/chiavdf/fast_vdf/cmake/: FindGMP.cmake  FindGMPXX.cmake
lib/chiavdf/fast_vdf/python_bindings/: chiavdf.cpp  fastvdf.cpp  test.py  test_verifier.py  verifier.py
subprojects/chia_core/: pyproject.toml
subprojects/chia_core/chia/core/: __init__.py
subprojects/chia_core/chia/core/types/: ints.py
tools/process_compact_vdf/: CMakeLists.txt  README.md
tools/process_compact_vdf/src/: chia_protocol.cpp  chia_protocol.hpp  clvm_length.cpp  clvm_length.hpp  db_v2.cpp  db_v2.hpp  export_compact_vdf.cpp  export_compact_vdf.hpp  http_fetch.cpp  http_fetch.hpp  main.cpp  mini_json.cpp  mini_json.hpp  process_compact_vdf.cpp  process_compact_vdf.hpp  streamable.hpp  vdf_validate.cpp  vdf_validate.hpp  zstd_util.cpp  zstd_util.hpp
(+7481 files in other folders)
