[tool.poetry]
name = "chia-blockchain"
# see [tool.poetry-dynamic-versioning]
version = "0.0.0"
description = "Chia blockchain full node, farmer, timelord, and wallet."
authors = ["Mariano Sorgente <mariano@chia.net>"]
license = "Apache License"
readme = "README.md"
keywords= ["chia", "blockchain", "node"]
homepage = "https://chia.net/"
packages = [{ include = "chia"}, { include = "mozilla-ca/cacert.pem" }]

[tool.poetry.scripts]
chia = "chia.cmds.chia:main"
chia_daemon = "chia.daemon.server:main"
chia_wallet = "chia.server.start_wallet:main"
chia_full_node = "chia.server.start_full_node:main"
chia_harvester = "chia.server.start_harvester:main"
chia_farmer = "chia.server.start_farmer:main"
chia_introducer = "chia.server.start_introducer:main"
chia_crawler = "chia.seeder.start_crawler:main"
chia_seeder = "chia.seeder.dns_server:main"
chia_timelord = "chia.server.start_timelord:main"
chia_timelord_launcher = "chia.timelord.timelord_launcher:main"
chia_full_node_simulator = "chia.simulator.start_simulator:main"
chia_data_layer = "chia.server.start_data_layer:main"
chia_data_layer_http = "chia.data_layer.data_layer_server:main"
chia_data_layer_s3_plugin = "chia.data_layer.s3_plugin_service:run_server"

[[tool.poetry.source]]
name = "chia"
url = "https://pypi.chia.net/simple/"
priority = "supplemental"

[tool.poetry.urls]
"Source" = "https://github.com/Chia-Network/chia-blockchain/"
"Changelog" = "https://github.com/Chia-Network/chia-blockchain/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8.10, <3.13"
aiofiles = "*"  # Async IO for files
aiohttp = "*"  # HTTP server for full node rpc
aiosqlite = "*"  # asyncio wrapper for sqlite, to store blocks
anyio = "*"
bitstring = "*"  # Binary data management library
boto3 = "*"  # AWS S3 for Data Layer S3 plugin
chiabip158 = "*"  # bip158-style wallet filters
chiapos = "*"  # proof of space
chia_rs = "*"
chiavdf = "*"  # timelord and vdf verification
click = "*"  # For the CLI
clvm = "*"
clvm_tools = "*"  # Currying Program.to other conveniences
clvm_tools_rs = "*"  # Rust implementation of clvm_tools' compiler
colorama = "*"  # Colorizes terminal output
colorlog = "*"  # Adds color to logs
concurrent_log_handler = "*"  # Concurrently log and rotate logs
cryptography = "*"  # Python cryptography library for TLS - keyring conflict
dnslib = "*"  # dns lib
dnspython = "*"  # Query DNS seeds
filelock = "*"  # For reading and writing config multiprocess and multithread safely  (non-reentrant locks)
keyring = "*"  # Store keys in MacOS Keychain, Windows Credential Locker
packaging = "*"
pip = "*"
psutil = [
    {version="*", markers="platform_machine!='aarch64'"},
    {version="*", markers="platform_machine=='aarch64'", source="chia"},
]
pyyaml = "*"  # Used for config file format
setproctitle = "*"  # Gives the chia processes readable names
setuptools = "*"
sortedcontainers = "*"  # For maintaining sorted mempools
typing-extensions = "*"  # typing backports like Protocol and TypedDict
watchdog = "*"  # Filesystem event watching - watches keyring.yaml
zstd = [
	{version="*", python = "<3.12"},
	{version="*", python = "3.12", source="chia"},
]
importlib-resources = "*"
hsms = "*"
aiohttp_cors = { version = "*", optional = true }
black = { version = "*", optional = true }
build = { version = "*", optional = true }
coverage = { version = "*", optional = true }
diff-cover = { version = "*", optional = true }
flake8 = { version = "*", optional = true }
isort = { version = "*", optional = true }
# TODO: but...  keyrings_cryptfile goes 15 minutes without locking while this does in 75 seconds
"keyrings.cryptfile" = { version = "*", optional = true }
mypy = { version = "*", optional = true }
pre-commit = [ { version = "*", python = "<3.9", optional = true }, { version = "*", python = ">=3.9", optional = true } ]
py3createtorrent = { version = "*", optional = true }
pyinstaller = { version = "*", optional = true }
pylint = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-cov = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-monitor = { version = "*", platform = "linux", optional = true }
pytest-xdist = { version = "*", optional = true }
types-aiofiles = { version = "*", optional = true }
types-cryptography = { version = "*", optional = true }
types-pyyaml = { version = "*", optional = true }
types-setuptools = { version = "*", optional = true }
lxml = { version = "*", optional = true }
miniupnpc = { version = "*", source = "chia", optional = true }
pyupgrade = { version = "*", optional = true }
# big-o = {version = "*", optional = true}
# numpy = [
# 	{version="*", python = "<3.9", optional = true},
# 	{version="*", python = ">=3.9", optional = true}]


[tool.poetry.extras]
dev = ["aiohttp_cors", "black", "build", "coverage", "diff-cover", "flake8", "isort", "mypy", "pre-commit", "py3createtorrent", "pyinstaller", "pylint", "pytest", "pytest-cov", "pytest-mock", "pytest-monitor", "pytest-xdist", "twine", "types-aiofiles", "types-cryptography", "types-pyyaml", "types-setuptools", "pyupgrade", "lxml"]
upnp = ["miniupnpc"]
legacy_keyring = ["keyrings.cryptfile"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
format-jinja = """
    {%- if distance == 0 -%}
        {%- if stage is none -%}
            {{ base }}
        {%- else -%}
            {{ base }}-{{stage}}{{revision}}
        {%- endif -%}
    {%- else -%}
        {%- if stage is none -%}
            {{ base }}-dev{{ distance }}
        {%- else -%}
            {{ base }}-{{stage}}{{revision}}.dev{{ distance }}
        {%- endif -%}
    {%- endif -%}
"""
#format-jinja = """
#    {%- if distance == 0 -%}
#        {{ serialize_pep440(base, stage, revision) }}
#    {%- else -%}
#        {{ serialize_pep440(base, stage, revision, dev=distance) }}
#    {%- endif -%}
#"""
style = "semver"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120
target-version =  ['py38', 'py39', 'py310', 'py311', 'py312']
include = '''
^/(
    [^/]*.py
    | (benchmarks|build_scripts|chia|tests|tools)/.*\.pyi?
)$
'''
exclude = ''
